# video

./: .gitignore  README.md  pyinstaller.spec  pyproject.toml  requirements.txt
docs/: README_DEV.md  packaging.md
scripts/: build_exe.py  smoke_test.py
src/video_unicalizator/: __init__.py  __main__.py  app.py  config.py  paths.py  state.py
src/video_unicalizator/core/: __init__.py  audio_mixer.py  quality_checker.py  recipe_planner.py  text_overlay.py  variation_generator.py  video_processor.py
src/video_unicalizator/scheduler/: __init__.py  excel_exporter.py  schedule_builder.py
src/video_unicalizator/services/: __init__.py  export_service.py  file_loader.py  logger.py  music_loader.py  quote_loader.py
src/video_unicalizator/ui/: __init__.py  main_window.py  preview_controller.py  preview_support.py
src/video_unicalizator/ui/tabs/: batch_runner.py  scheduler.py  text_editor.py
src/video_unicalizator/ui/widgets/: __init__.py  color_picker.py  draggable_text.py  (+3 more)
src/video_unicalizator/utils/: emoji_assets.py  ffmpeg_tools.py  image_tools.py  temp_paths.py  tk_runtime.py  validation.py
tests/integration/: __init__.py  test_file_loader.py  test_generation_console.py  test_smoke.py  test_text_editor.py  test_timeline_editor.py  test_video_preview.py
tests/unit/: __init__.py  test_emoji_assets.py  test_ffmpeg_tools.py  test_music_loader.py  test_preview_support.py  test_quote_loader.py  test_recipe_planner.py  test_schedule_builder.py  test_state.py  test_text_overlay.py  test_validation.py  test_variation_generator.py  test_video_processor.py
